Fix: Images gap in index.instagram.css

--- a/css/index.instagram.css
+++ b/css/index.instagram.css
@@ -39,6 +39,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  row-gap: 30px;
   .content-part {
     display: flex;
     flex-direction: column;
